--- a/task33.css
+++ b/task33.css
@@ -18,6 +18,7 @@ ul {
 	box-sizing: border-box;
 	list-style: none;
 	width: 100%;
+	height: 9.09%;
 }
 ul li {
 	box-sizing: border-box;
@@ -49,6 +50,8 @@ ul li {
 }
 #car {
 	position: absolute;
+	left: 0;
+	top: 0;
 	box-sizing: border-box;
 	line-height: 0;
 	background-color: #99a9bf;
